<resources>
    <string name="app_name">Atlas</string>
    <string name="domain_name">Domain name</string>
    <string name="example_of_text">Example of text</string>
    <string name="edit">EDIT</string>
    <string name="remove">Remove</string>
    <string name="todo">TODO</string>
    <string name="image">Image</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_delete_this_domain">Are you sure you want to delete this domain?</string>
    <string name="no">No</string>
</resources>